--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -8,7 +8,7 @@
     "BlindFeaturesScreen" : "--comment--",
     "headLine1" : "Assistant",
     "headLine2" : "Mode",
-    "feature1" : "Send a pic",
+    "feature1" : "Glasses Connection",
     "feature2" : "Video Call",
     "feature3" : "Chatgpt-AR",
     "feature4" : "Chatgpt-EN",
