--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -8,7 +8,7 @@
     "BlindFeaturesScreen" : "--comment--",
     "headLine1" : "وضع",
     "headLine2" : "المساعد",
-    "feature1" : " إرسال صورة",
+    "feature1" : " التوصيل بالنظارة",
     "feature2" : "مكالمة ڤيديو",
     "feature3" : "شات جي بي تي بالعربي",
     "feature4" : "شات جي بي تي بالإنجليزية",
